# freecell

./: AUTHORS  ChangeLog  Makefile.in  NEWS  README  configure  configure.ac
doc/: Makefile.am  Makefile.in  freecell.6
src/: Makefile.am  Makefile.in  freecell.c  freecell.h  gameno.c
